musician-app/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: musician-app
  namespace: application
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: Musician-app
